# production-agent

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  PRODUCT.md  README.md  pyproject.toml
shows/sample-show/: budget.yaml  callsheet.yaml  contract-a1.yaml  contract-a2.yaml  contract-camera-operator.yaml  contract-producer.yaml  contract-production-manager.yaml  contract-stage-manager.yaml  contract-technical-director.yaml  contract-utility.yaml  crew.csv  gear-manifest.yaml  rundown.yaml  show.yaml  talent-contacts.yaml  tech-specs.md  venue.md
src/pagent/: __init__.py  bundle.py  permissions.py  retrieval.py  server.py  tools.py
tests/: conftest.py  test_lookups.py  test_permissions.py  test_retrieval.py  test_server.py
web/: package-lock.json  package.json
web/client/: index.html  package.json
web/client/src/: App.tsx  Chat.tsx  DocBrowser.tsx  PaperworkView.tsx  api.ts  styles.css
web/server/: package.json
web/server/src/: agent.ts  config.ts  guardrails.ts  index.ts  mcp.ts
web/server/test/: guardrails.test.ts  mcp.test.ts
